--- a/i18n/en.pot
+++ b/i18n/en.pot
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2023-02-23T14:26:05.271Z\n"
-"PO-Revision-Date: 2023-02-23T14:26:05.271Z\n"
+"POT-Creation-Date: 2023-02-24T10:07:13.705Z\n"
+"PO-Revision-Date: 2023-02-24T10:07:13.705Z\n"
 
 msgid "Never"
 msgstr "Never"
@@ -190,8 +190,8 @@ msgstr "Login"
 msgid "Failed to update password"
 msgstr "Failed to update password"
 
-msgid "2 Factor Authentication"
-msgstr "2 Factor Authentication"
+msgid "Two-factor Authentication"
+msgstr "Two-factor Authentication"
 
 msgid ""
 "To disable 2 Factor Authentication for your account, first enter the "
@@ -200,17 +200,11 @@ msgstr ""
 "To disable 2 Factor Authentication for your account, first enter the "
 "confirmation code from the Authenticator App and then click \"Disable\"."
 
-msgid "Instructions after disabling 2FA"
-msgstr "Instructions after disabling 2FA"
+msgid "Remove two-factor account"
+msgstr "Remove two-factor account"
 
-msgid ""
-"After disabling 2-factor authentication on your account we recommend to "
-"also remove the account from the Authenticator App on your phone/tablet, so "
-"you don't run into problems if you want to re-enable it in the future."
-msgstr ""
-"After disabling 2-factor authentication on your account we recommend to "
-"also remove the account from the Authenticator App on your phone/tablet, so "
-"you don't run into problems if you want to re-enable it in the future."
+msgid ""Two-factor authentication is now turned off. It is recommended to remove the account from your authenticator app now to prevent any future issues re-enabling two-factor authentication."
+msgstr "Two-factor authentication is now turned off. It is recommended to remove the account from your authenticator app now to prevent any future issues re-enabling two-factor authentication."
 
 msgid "Play store"
 msgstr "Play store"
@@ -218,58 +212,76 @@ msgstr "Play store"
 msgid "App store"
 msgstr "App store"
 
-msgid "In the Authenticator App, click the ➕ sign to add a new entry."
-msgstr "In the Authenticator App, click the ➕ sign to add a new entry."
-
-msgid "Choose \"Scan a barcode\""
-msgstr "Choose \"Scan a barcode\""
-
-msgid "Scan the barcode below"
-msgstr "Scan the barcode below"
-
-msgid "Now enter the code from the Authenticator app below and click \"enable\""
-msgstr "Now enter the code from the Authenticator app below and click \"enable\""
-
-msgid "Instructions for re-enabling 2-Factor Authentication"
-msgstr "Instructions for re-enabling 2-Factor Authentication"
+msgid "Turn on two-factor authentication"
+msgstr "Turn on two-factor authentication"
 
 msgid ""
-"When enabling 2 Factor Authentication, you have to add a new entry to the "
-"Authenticator App. If you previously had configured the Authenticator App "
-"for this user account you need to remove this entry and create a new one, "
-"otherwise two Factor Authentication can not be enabled."
+"Make sure you have an authenticator app installed on your device. We "
+"recommend Google Authenticator"
 msgstr ""
-"When enabling 2 Factor Authentication, you have to add a new entry to the "
-"Authenticator App. If you previously had configured the Authenticator App "
-"for this user account you need to remove this entry and create a new one, "
-"otherwise two Factor Authentication can not be enabled."
+"Make sure you have an authenticator app installed on your device. We "
+"recommend Google Authenticator"
 
-msgid "2 Factor Authentication is currently"
-msgstr "2 Factor Authentication is currently"
+msgid ""
+"Now, enter the code from your authenticator app below and click the \"Turn "
+"on\" button."
+msgstr ""
+"Now, enter the code from your authenticator app below and click the \"Turn "
+"on\" button."
 
-msgid "enabled"
-msgstr "enabled"
+msgid ""
+"Now, enter the authentication code below and click the \"Turn "
+"off\" button."
+msgstr ""
+"Now, enter the authentication code below and click the \"Turn "
+"off\" button."
 
-msgid "disabled"
-msgstr "disabled"
+msgid "Already set up two-factor authentication before?"
+msgstr "Already set up two-factor authentication before?"
 
-msgid "Could not update 2 Factor authentication status"
-msgstr "Could not update 2 Factor authentication status"
+msgid ""
+"If you have set up two-factor authentication for this account before, you "
+"need to remove that entry from your authenticator app before setting it up "
+"again."
+msgstr ""
+"If you have set up two-factor authentication for this account before, you "
+"need to remove that entry from your authenticator app before setting it up "
+"again."
 
-msgid "Please enter a 6 digit code"
-msgstr "Please enter a 6 digit code"
+msgid ""
+"Two-factor authentication protects your account with an extra layer of "
+"security. With two-factor authentication turned on, you will need to enter "
+"an authentication code from your device every time you log in."
+msgstr ""
+"Two-factor authentication protects your account with an extra layer of "
+"security. With two-factor authentication turned on, you will need to enter "
+"an authentication code from your device every time you log in."
 
-msgid "2 Factor Authentication code"
-msgstr "2 Factor Authentication code"
+msgid "Two-factor authentication is on."
+msgstr "Two-factor authentication is on."
 
-msgid "XXXXXX"
-msgstr "XXXXXX"
+msgid "Two-factor authentication is off."
+msgstr "Two-factor authentication is off."
 
-msgid "Disable"
-msgstr "Disable"
+msgid "Open your authenticator app."
+msgstr "Open your authenticator app."
 
-msgid "Enable"
-msgstr "Enable"
+
+msgid "Could not update two-factor authentication"
+msgstr "Could not update two-factor authentication"
+
+msgid ""
+"This code does not look right. Enter the six digit code from your "
+"authentication app."
+msgstr ""
+"This code does not look right. Enter the six digit code from your "
+"authentication app."
+
+msgid "Six digit authentication code"
+msgstr "Six digit authentication code"
+
+msgid "Turn off two-factor authentication"
+msgstr "Turn off two-factor authentication"
 
 msgid "Could not enable 2 Factor Authentication"
 msgstr "Could not enable 2 Factor Authentication"
